mws30(fix): More space on mobile

--- a/apps/mws30/src/app/game/first-round/first-round.component.scss
+++ b/apps/mws30/src/app/game/first-round/first-round.component.scss
@@ -1,3 +1,3 @@
 mat-divider {
-  margin: 2em 0;
+  margin: var(--mat-divider-margin);
 }
