--- a/apps/mws30/src/app/game/regular-round/regular-round.component.scss
+++ b/apps/mws30/src/app/game/regular-round/regular-round.component.scss
@@ -3,6 +3,6 @@
 }
 
 mat-divider {
-  margin: 2em 0;
+  margin: var(--mat-divider-margin);
 }
 
